# AI_Agent_Clause

./: .gitignore  ARCHITECTURE.md  DEPLOY.md  Dockerfile  Makefile  README.md  ROADMAP.md  SPEC.md  app.py  demo - Shortcut.lnk  docker-compose.yml  render.yaml  requirements.txt
api/: pyproject.toml
api/clause/: analyse.py  app.py  config.py  demo.py  guard.py  models.py  qa.py  retention.py  rules.py  text.py
api/clause/agent/: execute.py  loop.py  prompts.py  tools.py  verify.py
api/clause/analysis/: service.py
api/clause/auth/: codes.py  deps.py  repo.py  routes.py  schemas.py  security.py
api/clause/db/: pool.py
api/clause/db/migrations/: 001_init.sql  002_usage_pools.sql  003_accounts.sql  004_per_owner_upload_dedup.sql  005_uploads_used_counter.sql
api/clause/evals/: label.py  run.py
api/clause/ingest/: parse.py  service.py  storage.py
api/clause/retrieval/: chunking.py  embed.py  search.py
api/clause/routes/: analyses.py  documents.py
api/tests/: test_auth.py  test_chunking.py  test_guard.py  test_parse.py  test_prompt_cache.py  test_verify.py
demo/: build_pdfs.py
demo/contracts/: saas_msa.txt
demo/precomputed/: saas_msa.json  salesforce_msa.json
evals/: build_corpus.py
evals/corpus/: salesforce_msa.source.txt  tearlab_agreement.source.txt  wejo_msa.source.txt
evals/labels/: salesforce_msa.reading.txt  salesforce_msa.yaml
rules/: v1.yaml
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  types.ts
web/src/api/: client.ts
web/src/auth/: AuthContext.tsx
web/src/components/: AskPanel.tsx  FindingCard.tsx  Form.tsx  KeyTermsTable.tsx  Layout.tsx  Severity.tsx  Trace.tsx
web/src/demo/: index.ts
web/src/pages/: Analyse.tsx  Landing.tsx  Login.tsx  Signup.tsx
